--- a/libWindowGraphicCapture.vcxproj.filters
+++ b/libWindowGraphicCapture.vcxproj.filters
@@ -62,6 +62,9 @@
     <ClInclude Include="sources\Unity.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="sources\Unreal.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
@@ -97,6 +100,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="sources\Unity.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="sources\Unreal.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
